# yst

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: client.rs  client_config.rs  lib.rs  main.rs  position_utils.rs  simple_box.rs  yst_storage.rs
daemon/: Cargo.toml
daemon/src/: active_window.rs  api.rs  config.rs  lib.rs  main.rs  storage.rs  utils.rs  watcher.rs  wayland_watcher.rs  wl_client.rs  x11_watcher.rs
daemon/src/api/: day.rs  today.rs
daemon/src/utils/: fs.rs  logger.rs  process.rs
daemon/src/watcher/: active_win.rs  storage.rs  x11helper.rs
daemon/src/wayland_watcher/: idle_handler.rs  toplevel_handler.rs
daemon/src/x11_watcher/: active_win.rs  idle_watcher.rs  x11helper.rs
shared/: Cargo.toml
shared/src/: config.rs  lib.rs  storage.rs  storage_utils.rs  utils.rs
src/: api.rs  config.rs  main.rs  utils.rs  watcher.rs
src/api/: today.rs
src/utils/: fs.rs  logger.rs
src/watcher/: idle_watcher.rs  storage.rs  x11helper.rs
