[package]
name = "daemon"
version = "0.1.0"
edition = "2021"

[features]
default=["api"]
api=["dep:axum", "dep:tokio"]

[dependencies]
axum = {version = "0.7.5", optional = true}
chrono = "0.4.37"
tokio = { version = "1.37.0", features = ["full"], optional = true }
x11rb = {version = "0.13.0", features=["xinput"]}
shared = {path= "../shared/"}
serde_json = "1.0.115"
serde = { version = "1.0.197", features = ["derive"] }
