[package]
name = "daemon"
version = "0.1.0"
edition = "2021"

[features]
default=["api", "x11"]
api=["dep:axum", "dep:tokio"]
x11=["dep:x11rb"]
wayland=["dep:wayland-scanner", "dep:wayland-client", "dep:wayland-commons"]

[build-dependencies]
wayland-scanner = {version="0.24", optional = true}

[dependencies]
axum = {version = "0.7.5", optional = true}
chrono = "0.4.37"
tokio = { version = "1.37.0", features = ["full"], optional = true }
x11rb = {version = "0.13.0", features=["xinput"], optional = true}
shared = {path= "../shared/"}
serde_json = "1.0.115"
serde = { version = "1.0.197", features = ["derive"] }
wayland-client = {version="0.31.2", optional = true}
wayland-commons = {version = "0.29.5", optional = true}
lazy_static = "1.4.0"
