[package]
name = "daemon"
version = "0.1.0"
edition = "2021"

[features]
default=["api", "wayland"]
api=["dep:axum", "dep:tokio", "dep:tower-http"]
x11=["dep:x11rb"]
wayland=["dep:wayland-sys", "dep:wayland-client", "dep:wayland-commons", "dep:wayland-scanner"]

[dependencies]
axum = {version = "0.7.5", optional = true}
chrono = "0.4.37"
tokio = { version = "1.37.0", features = ["full"], optional = true }
x11rb = {version = "0.13.0", features=["xinput"], optional = true}
shared = {path= "../shared/"}
serde_json = "1.0.115"
serde = { version = "1.0.197", features = ["derive"] }
smallvec = "1.13.2"
lazy_static = "1.4.0"
wayland-sys = {version="0.31.1", optional = true}
wayland-client = {version="0.31.2", optional = true}
wayland-commons = {version="0.29.5", optional = true}
wayland-scanner = {version="0.31.1", optional = true}
wayland-backend = "0.3.3"
tower-http = {version = "0.5.2", features = ["cors"], optional = true}
